--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,6 +14,10 @@
     <body>
       <div>
     <h1><a class="page-header" href="/">Django Girls Blog</a></h1>
+    {% if user.is_authenticated %}
+    <a href="{% url 'post_new' %}"><p>add new post</p></a>
+    {% endif %}
+
 </div>
 
 <div class="content container">
